k8s/infra/vpn/netbird/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: netbird
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - "netbird.optimcloud.com"
  rules:
    - backendRefs:
        - name: netbird-dashboard
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
    - backendRefs:
        - name: netbird-backend-management
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /management.ManagementService/
    - backendRefs:
        - name: netbird-backend-signal
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /signalexchange.SignalExchange/
